--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,29 @@ project(Pokemons)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(google-tests/googletest-master)
-include_directories(google-tests/googletest-master/googletest/include)
-include_directories(google-tests/googletest-master/googlemock/include)
+option(TEST "Build tests instead of program" OFF)
 
-add_executable(Pokemons
-        main.cpp
-        PokemonsGame/Game.h
-        PokemonsGame/Location.h
-        PokemonsGame/Player.h
-        PokemonsGame/Pokemon.h
-        PokemonsGame/Ability.h
-        test.cpp PokemonsGame/Battle.h)
-target_link_libraries(Pokemons gtest gtest_main)
+if(TEST)
+    add_subdirectory(google-tests/googletest-master)
+    include_directories(google-tests/googletest-master/googletest/include)
+    include_directories(google-tests/googletest-master/googlemock/include)
+    add_executable(Pokemons
+            mainForTest.cpp
+            test.cpp
+            PokemonsGame/Game.h
+            PokemonsGame/Location.h
+            PokemonsGame/Player.h
+            PokemonsGame/Pokemon.h
+            PokemonsGame/Ability.h
+            PokemonsGame/Battle.h)
+    target_link_libraries(Pokemons gtest gtest_main)
+else()
+    add_executable(Pokemons
+            main.cpp
+            PokemonsGame/Game.h
+            PokemonsGame/Location.h
+            PokemonsGame/Player.h
+            PokemonsGame/Pokemon.h
+            PokemonsGame/Ability.h
+            PokemonsGame/Battle.h)
+endif()
