--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,10 @@ env:
   - TARGET_CPU=x86 TEST=ON
 
 install:
-  - source ci/travis/install-linux.sh
+  - source ci/travis/install/install-linux.sh
 
 script:
   - cd build
   - cmake .. -DTEST=$TEST -DTARGET_CPU=$TARGET_CPU
   - make
   - ./Pokemons
-  - g++ main.cpp -std=c++17 -o travis_gcc_cpp17
-  - ./travis_gcc_cpp17
